--- a/Flyr.Supermarket/Flyr.Supermarket.Console/Flyr.Supermarket.Console.csproj
+++ b/Flyr.Supermarket/Flyr.Supermarket.Console/Flyr.Supermarket.Console.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Flyr.Supermarket.Domain\Flyr.Supermarket.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
